adds assert